packages/terra-time-input/src/TimeInput.module.scss
// stylelint-disable declaration-property-value-blacklist scss/at-mixin-pattern
// stylelint-disable scss/at-mixin-pattern

:local {
  @mixin focus-styles {
    border-color: var(--terra-time-input-focus-border-color, #4cb2e9);
    border-style: var(--terra-time-input-focus-border-style, solid);
    border-width: var(--terra-time-input-focus-border-width, 1px);
    opacity: var(--terra-time-input-focus-opacity, 1);
    outline: none;
  }

  .time-input {
    background-color: var(--terra-time-input-background-color, #fff);
    background-image: var(--terra-time-input-background-image, none);
    background-position: 0 100%;
    background-repeat: no-repeat;
    background-size: var(--terra-time-input-background-size, 0 0);
    border-color: var(--terra-time-input-border-color, #dedfe0);
    border-radius: var(--terra-time-input-border-radius, 3px);
    border-style: var(--terra-time-input-border-style, solid);
    border-width: var(--terra-time-input-border-width, 1px);
    box-sizing: content-box;
    color: var(--terra-time-input-color, #1c1f21);
    direction: ltr;
    display: inline-block;
    font-size: var(--terra-time-input-font-size, 1.14286rem);
    line-height: var(--terra-time-input-line-height, 1.375);
    margin: 0 0.5rem 0.5rem 0;
    padding-bottom: var(--terra-time-input-padding-bottom, 0.2142857143rem);
    padding-left: var(--terra-time-input-padding-left, 0.2142857143rem);
    padding-right: var(--terra-time-input-padding-right, 0.2142857143rem);
    padding-top: var(--terra-time-input-padding-top, 0.2142857143rem);
    transition-duration: var(--terra-time-input-transition-duration, 0.2s);
    transition-property: background-size;
    transition-timing-function: var(--terra-time-input-transition-timing-function, ease);

    &:hover {
      background-color: var(--terra-time-input-hover-background-color, #fff);
      border: var(--terra-time-input-hover-border, 1px solid #dedfe0);
      color: var(--terra-time-input-hover-color, #1c1f21);

      .time-input-hour,
      .time-input-minute,
      .time-input-second {
        color: var(--terra-time-input-hover-color, #1c1f21);
      }
    }

    &.is-focused {
      @include focus-styles;
      background-color: var(--terra-time-input-focus-background-color, #fff);
      background-size: var(--terra-time-input-focus-background-size, 0 0);
      color: var(--terra-time-input-focus-color, #1c1f21);

      [dir=ltr] & {
        box-shadow: var(--terra-time-input-focus-ltr-box-shadow, 0 0 8px #a6d9f4);
      }

      [dir=rtl] & {
        box-shadow: var(--terra-time-input-focus-rtl-box-shadow, 0 0 8px #a6d9f4);
      }

      .time-input-hour,
      .time-input-minute,
      .time-input-second {
        color: var(--terra-time-input-focus-color, #1c1f21);
      }
    }

    &.disabled {
      background-color: var(--terra-time-input-disabled-background-color, rgba(111, 116, 119, 0.2));
      border: var(--terra-time-input-disabled-border, 1px solid #868a8c);
      color: var(--terra-time-input-disabled-color, #1c1f21);
      cursor: default;
      opacity: var(--terra-time-input-disabled-opacity, 0.25);
      pointer-events: none;
    }

    .time-input-hour[disabled],
    .time-input-minute[disabled],
    .time-input-second[disabled] {
      opacity: 1;
    }
  }

  .time-input-hour,
  .time-input-minute,
  .time-input-second {
    background-color: var(--terra-time-input-background-color, #fff);
    background-image: var(--terra-time-input-background-image, none);
    background-position: 0 100%;
    background-repeat: no-repeat;
    background-size: var(--terra-time-input-background-size, 0 0);
    border-color: var(--terra-time-input-border-color, #dedfe0);
    border-radius: var(--terra-time-input-border-radius, 3px);
    border-style: var(--terra-time-input-border-style, solid);
    border-width: var(--terra-time-input-border-width, 1px);
    box-sizing: border-box;
    caret-color: var(--terra-time-input-caret-color, #1c1f21);
    color: var(--terra-time-input-color, #1c1f21);
    display: table;
    height: var(--terra-time-input-mobile-height, 2.1428571429rem);
    line-height: var(--terra-time-input-mobile-line-height, 1.429);
    min-width: var(--terra-time-input-mobile-min-width, 4rem);
    padding-bottom: var(--terra-time-input-mobile-padding-bottom, 0.2857142857rem);
    padding-left: var(--terra-time-input-mobile-padding-left, 0.2857142857rem);
    padding-right: var(--terra-time-input-mobile-padding-right, 0.2857142857rem);
    padding-top: var(--terra-time-input-mobile-padding-top, 0.2857142857rem);
    transition-duration: var(--terra-time-input-transition-duration, 0.2s);
    transition-property: background-size;
    transition-timing-function: var(--terra-time-input-transition-timing-function, ease);
    width: 100%;

    &:hover {
      background-color: var(--terra-time-input-hover-background-color, #fff);
      border: var(--terra-time-input-hover-border, 1px solid #dedfe0);
      color: var(--terra-time-input-hover-color, #1c1f21);
    }

    &:focus {
      @include focus-styles;
      background-size: var(--terra-time-input-focus-background-size, 0 0);

      [dir=ltr] & {
        box-shadow: var(--terra-time-input-focus-ltr-box-shadow, 0 0 8px #a6d9f4);
      }

      [dir=rtl] & {
        box-shadow: var(--terra-time-input-focus-rtl-box-shadow, 0 0 8px #a6d9f4);
      }
    }

    &.desktop {
      background-color: transparent;
      background-size: 0 0;
      border: 0;
      border-radius: var(--terra-time-input-desktop-input-border-radius, 2px);
      display: inline-block;
      height: var(--terra-time-input-desktop-input-height, 1.5714285714rem);
      line-height: var(--terra-time-input-line-height, 1.375);
      padding: 0;

      &:hover {
        background-color: var(--terra-time-input-hover-background-color, #fff);
        color: var(--terra-time-input-hover-color, #1c1f21);
      }

      &:focus {
        border-color: transparent;
        box-shadow: none;
      }

      &::selection {
        background-color: transparent;
      }

      &.initial-focus {
        background-color: var(--terra-time-input-desktop-focused-input-background-color, rgba(139, 194, 249, 0.3));
        background-size: 0 0;
        border-color: transparent;
        box-shadow: none;
        color: var(--terra-time-input-focus-color, #1c1f21);
      }
    }
  }

  .time-input-hour.desktop {
    min-width: 1.7em;
    text-align: right;
    width: 1.7em;
  }

  .time-input-minute.without-second.desktop {
    min-width: 1.8em;
    text-align: left;
    width: 1.8em;
  }

  .time-input-minute.with-second.desktop {
    min-width: 1.1em;
    text-align: left;
    width: 1.1em;

    &[value=''] {
      min-width: 1.8em;
      text-align: left;
      width: 1.8em;
    }
  }

  .time-input-second.desktop {
    min-width: 1.8em;
    text-align: left;
    width: 1.8em;
  }

  .time-spacer {
    line-height: var(--terra-time-input-line-height, 1.375);
    margin-bottom: var(--terra-time-input-time-spacer-margin-bottom, 0.3571428571rem);
    margin-left: var(--terra-time-input-time-spacer-margin-left, 0.14285714rem);
    margin-right: var(--terra-time-input-time-spacer-margin-right, 0.14285714rem);
    margin-top: var(--terra-time-input-time-spacer-margin-top, 0.3571428571rem);
  }

  .meridiem-button {
    background-color: var(--terra-time-input-meridiem-button-background-color, transparent);
    border-color: var(--terra-time-input-meridiem-button-border-color, #c8cacb);
    color: var(--terra-time-input-meridiem-button-color, #1c1f21);
    font-size: var(--terra-time-input-meridiem-button-font-size, 1rem);
    height: var(--terra-time-input-mobile-height, 2.1428571429rem);
    line-height: var(--terra-time-input-mobile-line-height, 1.67142);
    outline: none;
    padding-bottom: var(--terra-time-input-meridiem-button-padding-bottom, 0.286rem);
    padding-top: var(--terra-time-input-meridiem-button-padding-top, 0.286rem);

    &:hover {
      background-color: var(--terra-time-input-meridiem-button-hover-background-color, #b9bbbc);
      border-color: var(--terra-time-input-meridiem-button-hover-border-color, #c8cacb);
      color: var(--terra-time-input-meridiem-button-hover-color, #000);
    }

    &[aria-pressed='true'] {
      background-color: var(--terra-time-input-meridiem-button-selected-background-color, #52585b);
      border-color: var(--terra-time-input-meridiem-button-selected-border-color, #52585b);
      color: var(--terra-time-input-meridiem-button-selected-color, #fff);
    }

    &[aria-pressed='true']:hover {
      background-color: var(--terra-time-input-meridiem-button-selected-hover-background-color, #40474a);
      border-color: var(--terra-time-input-meridiem-button-selected-hover-border-color, #40474a);
      color: var(--terra-time-input-meridiem-button-selected-hover-color, #fff);
    }
  }
}

